--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.login.LoginFragment">
+    tools:context=".ui.screens.login.LoginFragment">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -28,7 +28,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_semi_bold"
-                android:text="Hello!"
+                android:text="@string/hello"
                 android:textAlignment="center"
                 android:textColor="@color/custom_white"
                 android:textSize="24sp" />
@@ -42,7 +42,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/opensans_regular"
-                android:text="Enter your email and password below"
+                android:text="@string/enter_your_email_and_password_below"
                 android:textAlignment="center"
                 android:textColor="@color/custom_white"
                 android:textSize="12sp" />
@@ -130,7 +130,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semi_bold"
-                    android:text="Forgot your password?"
+                    android:text="@string/forgot_your_password"
                     android:textColor="@color/white"
                     android:textSize="14sp" />
 
@@ -157,7 +157,7 @@
                 android:background="@drawable/outlined_button_3"
                 android:fontFamily="@font/opensans_semi_bold"
                 android:letterSpacing="0.15"
-                android:text="Login"
+                android:text="@string/login"
                 android:textColor="@color/custom_white"
                 android:textSize="16sp" />
 
@@ -175,7 +175,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semi_bold"
-                    android:text="Don’t have account?"
+                    android:text="@string/don_t_have_account"
                     android:textColor="@color/custom_gray_2"
                     android:textSize="14sp" />
 
@@ -188,7 +188,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:fontFamily="@font/opensans_semi_bold"
-                    android:text="Sign Up"
+                    android:text="@string/sign_up"
                     android:textColor="@color/custom_white"
                     android:textSize="14sp" />
 
